Remove the index to avoid overlapping

--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -1536,7 +1536,7 @@ section.section.footer-section {
   width: 100vw;
   position: absolute;
   left: -140px;
-  z-index: -1;
+  // z-index: -1;
 }
 
 @media screen and (max-width: 991px) and (min-width: 1200px) {
